fix nav bar spacing

--- a/client/styles/footer-section.scss
+++ b/client/styles/footer-section.scss
@@ -7,6 +7,7 @@
   background: inherit;
   overflow: hidden;
   color: $secondary-color;
+  padding-top: 18%;
 
   #cloud {
     height: 65%;
